hyperstack-macros/tests/ui/validation_errors/unknown_top_level_arg.rs
use hyperstack_macros::hyperstack;

#[hyperstack(unknown = "value")]
mod broken {}

fn main() {}
